ms-brands/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ms-brands
    service: ms-brands
  name: ms-brands
  namespace: client-ms-brands
spec:
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
  selector:
    app: ms-brands
  type: ClusterIP
